Small fix with footer image's width becoming too small as viewport approaches 600px

--- a/styles.css
+++ b/styles.css
@@ -252,6 +252,7 @@ footer h2, footer p {
 .floated-right {
     flex: 1;
     height: 350px;
+    min-width: 180px;
 }
 
 .floated-right > img {
